[Implement Features] 뷰 수정

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,13 +104,14 @@
             android:layout_marginEnd="28dp"
             android:background="@drawable/et_area"
             android:ems="10"
-            android:nextFocusDown="@+id/activity_login_et_pass"
             android:fontFamily="@font/notosanscjkkr_demilight"
             android:hint="이메일을 입력해주세요."
             android:includeFontPadding="false"
+            android:inputType="textEmailAddress"
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="9sp"
             android:maxLines="1"
+            android:nextFocusDown="@+id/activity_login_et_pass"
             android:paddingLeft="16dp"
             android:paddingTop="12dp"
             android:paddingRight="16dp"
