--- a/app/src/main/res/layout/fragment_curator.xml
+++ b/app/src/main/res/layout/fragment_curator.xml
@@ -253,12 +253,16 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="26dp"
                     android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="13dp"
+                    android:ellipsize="end"
                     android:fontFamily="@font/notosanscjkkr_demilight"
                     android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
+                    android:maxLines="2"
                     android:text="흔들리는 꽃들 속에서 네 샴푸향이 느껴진거야 스쳐 지나간건가 뒤돌아보는 문장 "
                     android:textColor="#ffffff"
                     android:textSize="19sp"
+                    app:layout_constraintBottom_toTopOf="@+id/textView30"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -346,12 +350,16 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="26dp"
                     android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="13dp"
+                    android:ellipsize="end"
                     android:fontFamily="@font/notosanscjkkr_demilight"
                     android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
+                    android:maxLines="2"
                     android:text="마음 속 장마를 막아줄 우산 같은 문장"
                     android:textColor="#ffffff"
                     android:textSize="19sp"
+                    app:layout_constraintBottom_toTopOf="@+id/textView32"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
