--- a/app/src/main/res/layout/item_library_sentence_click.xml
+++ b/app/src/main/res/layout/item_library_sentence_click.xml
@@ -20,10 +20,12 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:ellipsize="end"
             android:fontFamily="@font/notosanscjkkr_regular"
             android:includeFontPadding="false"
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="2sp"
+            android:singleLine="true"
             android:text="번아웃을 극복하고 싶을 때 봐야하는 문장"
             android:textColor="#bcbcbc"
             android:textSize="13sp"
