[Fix Bugs] WritingSentenceThemeSearchFirst rv Fixed

--- a/app/src/main/res/layout/item_writing_sentence_theme_result.xml
+++ b/app/src/main/res/layout/item_writing_sentence_theme_result.xml
@@ -38,6 +38,7 @@
         android:layout_height="match_parent"
         android:textColor="@color/white"
         android:textSize="16sp"
+        android:text=""
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -49,14 +50,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="0.5"
-        android:visibility="gone"
-        android:src="@drawable/writing_sentence_theme_5_box_select"
+        android:background="@drawable/writing_sentence_theme_5_box_select"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:button="@null"
+        />
 
 
 
