--- a/app/src/main/res/layout/writing_sentence_step2.xml
+++ b/app/src/main/res/layout/writing_sentence_step2.xml
@@ -152,6 +152,8 @@
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/gl_left"
+        app:layout_constraintTop_toBottomOf="@id/writing_sentence_step2_tv_1"
+        android:layout_marginTop="24dp"
         tools:layout_editor_absoluteY="188dp" />
 
     <TextView
