--- a/app/src/main/res/layout/writing_sentence_step2.xml
+++ b/app/src/main/res/layout/writing_sentence_step2.xml
@@ -144,30 +144,31 @@
         />
 
     <TextView
-        android:id="@+id/textView45"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="책 제목"
-        android:textColor="@color/greyish_brown"
-        android:textSize="15sp"
-        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/gl_left"
-        tools:layout_editor_absoluteY="188dp" />
+        app:layout_constraintBottom_toTopOf="@id/writing_sentence_step2_tv_title"
+        android:layout_marginBottom="12dp"
+        android:text="책 제목"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:textColor="@color/greyish_brown"/>
 
     <TextView
         android:id="@+id/writing_sentence_step2_tv_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="11dp"
         android:background="@drawable/et_area"
-        android:gravity="start"
-        android:hint="책 제목을 검색해주세요."
         android:maxLength="40"
+        android:gravity="start"
+        android:layout_marginTop="220dp"
         android:padding="16dp"
+        android:hint="책 제목을 검색해주세요."
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/gl_right"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="@+id/gl_left"
-        app:layout_constraintTop_toBottomOf="@+id/textView45" />
+        app:layout_constraintEnd_toEndOf="@+id/gl_right"
+        />
 
     <ImageView
         android:id="@+id/writing_sentence_step2_btn_book_search"
@@ -184,78 +185,77 @@
         android:id="@+id/writing_sentence_step2_ll_warning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:orientation="horizontal"
-        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@id/gl_left"
-        app:layout_constraintTop_toBottomOf="@id/writing_sentence_step2_tv_title">
-
+        app:layout_constraintTop_toBottomOf="@id/writing_sentence_step2_tv_title"
+        android:layout_marginTop="10dp"
+        android:visibility="gone">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:src="@drawable/ic_warning"
             android:layout_marginVertical="3dp"
-            android:src="@drawable/ic_warning" />
-
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="3dp"
             android:text="책 제목을 검색해주세요!"
-            android:textColor="@color/reddish" />
+            android:layout_marginStart="3dp"
+            android:textColor="@color/reddish"/>
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView43"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        android:text="작가/옮긴이"
-        android:textColor="@color/greyish_brown"
-        android:textSize="15sp"
-        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/gl_left"
-        app:layout_constraintTop_toBottomOf="@+id/writing_sentence_step2_tv_title" />
+        app:layout_constraintBottom_toTopOf="@id/writing_sentence_step2_tv_author"
+        android:layout_marginBottom="12dp"
+        android:text="작가/옮긴이"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:textColor="@color/greyish_brown"/>
 
     <TextView
         android:id="@+id/writing_sentence_step2_tv_author"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:background="@drawable/et_area_grey"
-        android:gravity="start"
         android:maxLength="40"
+        android:gravity="start"
+        android:layout_marginTop="345dp"
         android:padding="16dp"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/gl_right"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="@+id/gl_left"
-        app:layout_constraintTop_toBottomOf="@+id/textView43" />
+        app:layout_constraintEnd_toEndOf="@+id/gl_right"
+        />
 
     <TextView
-        android:id="@+id/textView44"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="출판사"
-        android:textColor="@color/greyish_brown"
-        android:textSize="15sp"
-        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/gl_left"
-        app:layout_constraintTop_toBottomOf="@+id/writing_sentence_step2_tv_author" />
+        app:layout_constraintBottom_toTopOf="@id/writing_sentence_step2_tv_publisher"
+        android:layout_marginBottom="12dp"
+        android:text="출판사"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:textColor="@color/greyish_brown"/>
 
     <TextView
         android:id="@+id/writing_sentence_step2_tv_publisher"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:background="@drawable/et_area_grey"
-        android:gravity="start"
         android:maxLength="40"
+        android:gravity="start"
+        android:layout_marginTop="440dp"
         android:padding="16dp"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/gl_right"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="@+id/gl_left"
-        app:layout_constraintTop_toBottomOf="@+id/textView44" />
+        app:layout_constraintEnd_toEndOf="@+id/gl_right"
+        />
 
 
 
