--- a/app/src/main/res/layout/activity_curator_info.xml
+++ b/app/src/main/res/layout/activity_curator_info.xml
@@ -147,43 +147,56 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/const1">
 
-                <TextView
-                    android:id="@+id/tv_thema_num_cu_info"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:fontFamily="@font/notosanscjkkr_demilight"
-                    android:gravity="center_horizontal"
-                    android:includeFontPadding="false"
-                    android:letterSpacing="-0.02"
-                    android:lineSpacingExtra="14sp"
-                    android:text="47"
-                    android:textColor="@color/soft_green"
-                    android:textSize="29sp"
-                    app:layout_constraintBottom_toTopOf="@id/tv_thema_cu_info"
-                    app:layout_constraintLeft_toLeftOf="@id/cl_titleLayout"
-                    app:layout_constraintRight_toLeftOf="@id/tv_sentence_num_cu_info"
-                    app:layout_constraintTop_toTopOf="@id/cl_titleLayout"
-                    app:layout_constraintVertical_bias="1" />
-
-                <TextView
-                    android:id="@+id/tv_thema_cu_info"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="11dp"
-                    android:fontFamily="@font/notosanscjkkr_demilight"
-                    android:gravity="center_horizontal"
-                    android:includeFontPadding="false"
-                    android:letterSpacing="-0.02"
-                    android:lineSpacingExtra="6sp"
-                    android:text="테마"
-                    android:textColor="@color/soft_green"
-                    android:textSize="14sp"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/cl_curator_theme"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:paddingHorizontal="30dp"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="@id/tv_thema_num_cu_info"
-                    app:layout_constraintRight_toRightOf="@id/tv_thema_num_cu_info"
-                    app:layout_constraintTop_toBottomOf="@id/tv_thema_num_cu_info" />
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@id/cl_curator_sentence"
+                    >
 
+                    <TextView
+                        android:id="@+id/tv_thema_num_cu_info"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:fontFamily="@font/notosanscjkkr_demilight"
+                        android:gravity="center_horizontal"
+                        android:includeFontPadding="false"
+                        android:letterSpacing="-0.02"
+                        android:lineSpacingExtra="14sp"
+                        android:text="47"
+                        android:textColor="@color/soft_green"
+                        android:textSize="29sp"
+                        android:layout_marginRight="47dp"
+                        app:layout_constraintBottom_toTopOf="@id/tv_thema_cu_info"
+                        app:layout_constraintTop_toTopOf="@id/cl_curator_theme"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintVertical_bias="1" />
+
+                    <TextView
+                        android:id="@+id/tv_thema_cu_info"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="11dp"
+                        android:fontFamily="@font/notosanscjkkr_demilight"
+                        android:gravity="center_horizontal"
+                        android:includeFontPadding="false"
+                        android:letterSpacing="-0.02"
+                        android:lineSpacingExtra="6sp"
+                        android:text="테마"
+                        android:paddingHorizontal="8dp"
+                        android:textColor="@color/soft_green"
+                        android:textSize="14sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="@id/tv_thema_num_cu_info"
+                        app:layout_constraintRight_toRightOf="@id/tv_thema_num_cu_info"
+                        app:layout_constraintTop_toBottomOf="@id/tv_thema_num_cu_info" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <View
                     android:id="@+id/view12"
@@ -195,40 +208,54 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/tv_sentence_num_cu_info"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/notosanscjkkr_demilight"
-                    android:gravity="center_horizontal"
-                    android:includeFontPadding="false"
-                    android:letterSpacing="-0.02"
-                    android:lineSpacingExtra="14sp"
-                    android:text="29"
-                    android:textColor="@color/very_light_pink_two"
-                    android:textSize="29sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/tv_thema_num_cu_info"
-                    app:layout_constraintLeft_toRightOf="@id/tv_thema_num_cu_info"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/cl_curator_sentence"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:paddingHorizontal="30dp"
+                    app:layout_constraintTop_toTopOf="@id/cl_titleLayout"
+                    app:layout_constraintBottom_toBottomOf="@id/cl_titleLayout"
+                    app:layout_constraintLeft_toRightOf="@id/cl_curator_theme"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/tv_thema_num_cu_info"
-                    app:layout_constraintVertical_bias="1" />
+                    >
 
-                <TextView
-                    android:id="@+id/tv_sentence_cu_info"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/notosanscjkkr_demilight"
-                    android:gravity="center_horizontal"
-                    android:includeFontPadding="false"
-                    android:letterSpacing="-0.02"
-                    android:lineSpacingExtra="6sp"
-                    android:text="문장"
-                    android:textColor="@color/very_light_pink_two"
-                    android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/tv_thema_cu_info"
-                    app:layout_constraintLeft_toLeftOf="@id/tv_sentence_num_cu_info"
-                    app:layout_constraintRight_toRightOf="@id/tv_sentence_num_cu_info"
-                    app:layout_constraintTop_toBottomOf="@id/tv_sentence_num_cu_info" />
+                    <TextView
+                        android:id="@+id/tv_sentence_num_cu_info"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:fontFamily="@font/notosanscjkkr_demilight"
+                        android:gravity="center_horizontal"
+                        android:includeFontPadding="false"
+                        android:letterSpacing="-0.02"
+                        android:lineSpacingExtra="14sp"
+                        android:text="29"
+                        android:textColor="@color/very_light_pink_two"
+                        android:textSize="29sp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginLeft="47dp"
+                        app:layout_constraintBottom_toTopOf="@id/tv_sentence_cu_info"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintVertical_bias="1" />
+
+                    <TextView
+                        android:id="@+id/tv_sentence_cu_info"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/notosanscjkkr_demilight"
+                        android:gravity="center_vertical"
+                        android:includeFontPadding="false"
+                        android:text="문장"
+                        android:paddingHorizontal="8dp"
+                        android:textColor="@color/very_light_pink_two"
+                        android:textSize="14sp"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="@id/tv_sentence_num_cu_info"
+                        app:layout_constraintRight_toRightOf="@id/tv_sentence_num_cu_info"
+                        app:layout_constraintTop_toBottomOf="@id/tv_sentence_num_cu_info" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
