--- a/app/src/main/res/layout/activity_setting_version_info.xml
+++ b/app/src/main/res/layout/activity_setting_version_info.xml
@@ -37,10 +37,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/my_settings_version_info_img_simbol"
-        android:layout_marginTop="256dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tv_version_new"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintVertical_bias="0.33"
         />
 
     <ImageView
@@ -75,6 +77,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/img_settings_version_info_img_simbol"
+        app:layout_constraintBottom_toTopOf="@id/tv_version_now"
         />
 
     <TextView
@@ -87,6 +90,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_version_new"
+        app:layout_constraintBottom_toTopOf="@id/tv_android_os"
         android:layout_marginTop="10dp"
         />
 
@@ -99,7 +103,8 @@
         android:textSize="14sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_version_now" />
+        app:layout_constraintTop_toBottomOf="@id/tv_version_now"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 
