[Refactor Codes] 뷰 수정

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -355,7 +355,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="11dp"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintLeft_toLeftOf="@id/et_new_password_check"
                 app:layout_constraintTop_toBottomOf="@id/et_new_password_check"
                 app:srcCompat="@drawable/ic_possible" />
@@ -372,7 +372,7 @@
                 android:text="비밀번호가 일치해요!"
                 android:textColor="@color/soft_green"
                 android:textSize="14sp"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/img_new_password_match"
                 app:layout_constraintLeft_toRightOf="@id/img_new_password_warning"
                 app:layout_constraintStart_toEndOf="@+id/img_new_password_match"
