--- a/app/src/main/res/layout/activity_curator_info.xml
+++ b/app/src/main/res/layout/activity_curator_info.xml
@@ -162,7 +162,9 @@
                         android:id="@+id/tv_thema_num_cu_info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="87dp"
                         android:layout_marginTop="3dp"
+                        android:layout_marginRight="47dp"
                         android:fontFamily="@font/notosanscjkkr_demilight"
                         android:gravity="center_horizontal"
                         android:includeFontPadding="false"
@@ -171,10 +173,10 @@
                         android:text="47"
                         android:textColor="@color/soft_green"
                         android:textSize="29sp"
-                        android:layout_marginRight="47dp"
                         app:layout_constraintBottom_toTopOf="@id/tv_thema_cu_info"
-                        app:layout_constraintTop_toTopOf="@id/cl_curator_theme"
                         app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/cl_curator_theme"
                         app:layout_constraintVertical_bias="1" />
 
                     <TextView
@@ -223,7 +225,9 @@
                         android:id="@+id/tv_sentence_num_cu_info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="47dp"
                         android:layout_marginTop="3dp"
+                        android:layout_marginEnd="87dp"
                         android:fontFamily="@font/notosanscjkkr_demilight"
                         android:gravity="center_horizontal"
                         android:includeFontPadding="false"
@@ -232,10 +236,10 @@
                         android:text="29"
                         android:textColor="@color/very_light_pink_two"
                         android:textSize="29sp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:layout_marginLeft="47dp"
                         app:layout_constraintBottom_toTopOf="@id/tv_sentence_cu_info"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="1" />
 
                     <TextView
