--- a/app/src/main/res/layout/dialog_delete.xml
+++ b/app/src/main/res/layout/dialog_delete.xml
@@ -7,7 +7,7 @@
     android:background="@android:color/transparent">
 
     <ImageView
-        android:id="@+id/img_dialog_quit_mongle"
+        android:id="@+id/img_dialog_delete_mongle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="38dp"
@@ -22,10 +22,10 @@
         android:background="@drawable/dialog_area"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_dialog_quit_mongle">
+        app:layout_constraintTop_toBottomOf="@+id/img_dialog_delete_mongle">
 
         <TextView
-            android:id="@+id/tv_logout_q"
+            android:id="@+id/tv_delete_q"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="69dp"
@@ -35,35 +35,20 @@
             android:includeFontPadding="false"
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="-1sp"
-            android:text="몽글을 탈퇴하시겠어요?"
+            android:text="문장을 삭제하시겠어요?"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_logout"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginTop="5dp"
-            android:fontFamily="@font/notosanscjkkr_demilight"
-            android:gravity="center_horizontal"
-            android:includeFontPadding="false"
-            android:letterSpacing="-0.02"
-            android:text="탈퇴 후에는 몽글을 이용할 수 없어요!"
-            android:textColor="#a7a7a7"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="@+id/tv_logout_q"
-            app:layout_constraintStart_toStartOf="@+id/tv_logout_q"
-            app:layout_constraintTop_toBottomOf="@+id/tv_logout_q" />
 
         <TextView
-            android:id="@+id/tv_quit_yes"
+            android:id="@+id/tv_delete_yes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="42dp"
+            android:layout_marginTop="30dp"
             android:layout_marginBottom="25dp"
             android:background="@drawable/dialog_btn_yes"
             android:fontFamily="@font/notosanscjkkr_regular"
@@ -81,10 +66,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_logout" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_delete_q" />
 
         <TextView
-            android:id="@+id/tv_quit_no"
+            android:id="@+id/tv_delete_no"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginStart="14dp"
@@ -105,10 +90,10 @@
             app:layout_constraintBottom_toBottomOf="@+id/tv_quit_yes"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toRightOf="@id/tv_quit_yes"
+            app:layout_constraintLeft_toRightOf="@id/tv_delete_yes"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tv_quit_yes"
-            app:layout_constraintTop_toTopOf="@+id/tv_quit_yes"
+            app:layout_constraintStart_toEndOf="@+id/tv_delete_yes"
+            app:layout_constraintTop_toTopOf="@+id/tv_delete_yes"
             app:layout_constraintVertical_bias="0.0" />
 
 
