--- a/app/src/main/res/layout/item_library_sentence_click.xml
+++ b/app/src/main/res/layout/item_library_sentence_click.xml
@@ -55,19 +55,29 @@
             app:layout_constraintStart_toStartOf="@id/tv_library_sentence_themename"
             app:layout_constraintTop_toBottomOf="@id/tv_library_sentence_themename" />
 
-        <ImageView
-            android:id="@+id/library_sentence_more"
+        <CheckBox
+            android:id="@+id/cb_library_sentence_more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:paddingHorizontal="18dp"
             android:paddingTop="16dp"
             android:paddingBottom="8dp"
-            android:src="@drawable/more_1"
+            android:button="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="@id/tv_library_sentence_sentence"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_library_sentence_sentence" />
+
+        <ImageView
+            android:id="@+id/library_sentence_more"
+            android:layout_width="16dp"
+            android:layout_height="8dp"
+            android:src="@drawable/more_1"
+            android:layout_marginRight="23dp"
+            app:layout_constraintBottom_toBottomOf="@id/cb_library_sentence_more"
+            app:layout_constraintRight_toRightOf="@id/cb_library_sentence_more"
+            app:layout_constraintTop_toTopOf="@id/cb_library_sentence_more" />
 
         <LinearLayout
             android:id="@+id/library_sentence_more_box"
