--- a/app/src/main/res/layout/activity_modify.xml
+++ b/app/src/main/res/layout/activity_modify.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginHorizontal="16dp"
-    tools:context=".activity.ModifyActivity">
+    tools:context=".activity.ModifyLibraryWrittenSentenceActivity">
 
     <ImageView
         android:id="@+id/img_back_sentence_modify"
