[Implement Features] - 문장상세보기 : 신고하기 뷰 추가

--- a/app/src/main/res/layout/activity_sentence_detail_view.xml
+++ b/app/src/main/res/layout/activity_sentence_detail_view.xml
@@ -249,7 +249,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:visibility="gone"
+                android:visibility="visible"
                 android:id="@+id/ccc"
                 android:layout_width="69dp"
                 android:layout_height="69dp"
@@ -304,6 +304,63 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/lineeeee" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:visibility="visible"
+                android:id="@+id/cl_report"
+                android:layout_marginTop="41dp"
+                android:layout_marginEnd="28dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:background="@drawable/background_rectangle"
+                app:layout_constraintTop_toBottomOf="@+id/middle_line"
+                android:layout_width="151dp"
+                android:layout_height="69dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="허위 내용 신고"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingBottom="2dp"
+                    android:textStyle="normal"
+                    android:textSize="14sp"
+                    android:textColor="#838383"
+                    android:letterSpacing="-0.02"
+                    android:lineSpacingExtra="1sp"
+                    android:gravity="center_horizontal"/>
+
+                <View
+                    android:id="@+id/report_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#f2f2f2"
+                    android:layout_marginTop="34.5dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/report_delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="부적절한 내용 신고"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingBottom="3dp"
+                    android:layout_marginTop="7.5dp"
+                    android:textColor="#838383"
+                    android:textSize="14sp"
+                    android:textStyle="normal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/report_line" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
