--- a/app/src/main/res/layout/activity_sentence_detail_view.xml
+++ b/app/src/main/res/layout/activity_sentence_detail_view.xml
@@ -148,15 +148,12 @@
                 app:layout_constraintStart_toEndOf="@+id/imageView18"
                 app:layout_constraintTop_toTopOf="@+id/imageView18" />
 
-            <ImageView
+            <CheckBox
                 android:id="@+id/img_sentence_detail_view_edit_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:paddingStart="18dp"
-                android:paddingTop="23dp"
-                android:paddingEnd="13dp"
-                android:paddingBottom="21dp"
-                android:src="@drawable/more_1"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:button="@null"
+                android:background="@drawable/more_1"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
                 app:layout_constraintTop_toTopOf="@+id/middle_line" />
 
