[Implement Features] 문장 좋아요, 북마크 완료

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -188,7 +188,7 @@
             android:textColor="@color/very_light_pink_two"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/img_sentence_detail_likes"
+            app:layout_constraintEnd_toStartOf="@+id/img_div"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
@@ -213,7 +213,7 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@+id/imageView16"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/img_sentence_detail_likes"
+            app:layout_constraintStart_toEndOf="@+id/img_div"
             app:layout_constraintTop_toBottomOf="@+id/activity_login_btn_login" />
 
         <TextView
@@ -239,7 +239,7 @@
             app:layout_constraintTop_toBottomOf="@+id/activity_login_btn_login" />
 
         <ImageView
-            android:id="@+id/img_sentence_detail_likes"
+            android:id="@+id/img_div"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@+id/activity_login_tv_join"
