--- a/app/src/main/res/layout/activity_service_policy.xml
+++ b/app/src/main/res/layout/activity_service_policy.xml
@@ -336,7 +336,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView55" />
 
             <ImageView
-                android:id="@+id/img_sentence_detail_likes"
+                android:id="@+id/imgview1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="13dp"
@@ -360,7 +360,7 @@
                 android:textColor="#5f5f5f"
                 android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/img_sentence_detail_likes"
+                app:layout_constraintStart_toEndOf="@+id/imgview1"
                 app:layout_constraintTop_toBottomOf="@+id/textView56" />
 
             <TextView
@@ -376,7 +376,7 @@
                 android:textColor="#5f5f5f"
                 android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/img_sentence_detail_likes"
+                app:layout_constraintStart_toStartOf="@+id/imgview1"
                 app:layout_constraintTop_toBottomOf="@+id/textView57" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
