[Implement Features] 테마 북마크 완료, 버그 수정

--- a/app/src/main/res/layout/activity_detail_theme.xml
+++ b/app/src/main/res/layout/activity_detail_theme.xml
@@ -25,7 +25,7 @@
         android:src="@drawable/background_detail_theme_rounded"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView7" />
+        app:layout_constraintTop_toBottomOf="@id/img_detail_theme_writerimg" />
 
     <ImageView
         android:id="@+id/img_detail_theme_activity_back_btn"
@@ -57,7 +57,7 @@
         app:layout_constraintTop_toBottomOf="@+id/img_detail_theme_activity_back_btn" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/img_detail_theme_writerimg"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginTop="46dp"
@@ -75,9 +75,9 @@
         android:text="몽글찡"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
-        app:layout_constraintStart_toEndOf="@+id/imageView7"
-        app:layout_constraintTop_toTopOf="@+id/imageView7" />
+        app:layout_constraintBottom_toBottomOf="@+id/img_detail_theme_writerimg"
+        app:layout_constraintStart_toEndOf="@+id/img_detail_theme_writerimg"
+        app:layout_constraintTop_toTopOf="@+id/img_detail_theme_writerimg" />
 
     <TextView
         android:id="@+id/textView11"
@@ -131,7 +131,7 @@
         android:text="문장"
         android:textColor="@color/white"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+        app:layout_constraintBottom_toBottomOf="@+id/img_detail_theme_writerimg"
         app:layout_constraintEnd_toStartOf="@+id/textView46" />
 
     <ImageView
@@ -206,16 +206,26 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:id="@+id/imageView8"
+            android:id="@+id/btn_detail_theme_bookmark_box"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:src="@drawable/theme_info_btn_bookmark"
+            android:src="@drawable/theme_detail_ic_bookmark_box"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/img_detail_theme_bookmark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_detail_theme_bookmark_box"
+            app:layout_constraintEnd_toEndOf="@+id/btn_detail_theme_bookmark_box"
+            app:layout_constraintStart_toStartOf="@+id/btn_detail_theme_bookmark_box"
+            app:layout_constraintTop_toTopOf="@+id/btn_detail_theme_bookmark_box"
+            app:srcCompat="@drawable/theme_detail_ic_bookmark_off" />
 
         <ImageView
             android:id="@+id/img_writing_sentence_in_theme_btn"
@@ -224,10 +234,10 @@
             android:layout_marginStart="13dp"
             android:layout_marginEnd="16dp"
             android:src="@drawable/btn_green"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_detail_theme_bookmark_box"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView8"
-            app:layout_constraintTop_toTopOf="@+id/imageView8" />
+            app:layout_constraintStart_toEndOf="@+id/btn_detail_theme_bookmark_box"
+            app:layout_constraintTop_toTopOf="@+id/btn_detail_theme_bookmark_box" />
 
         <TextView
             android:layout_width="wrap_content"
