[Fix Bugs] 문장 상세보기 뷰로 넘어갈 때, 문장 인덱스가 제대로 안넘어가짐

--- a/app/src/main/res/navigation/nav_writing_sentence.xml
+++ b/app/src/main/res/navigation/nav_writing_sentence.xml
@@ -90,6 +90,11 @@
         android:id="@+id/writing_sentence_finish_fragment"
         android:name="com.example.mongleandroid_release.fragment.WritingSentenceFinishFragment"
         tools:layout="@layout/writing_sentence_finish">
+        <argument
+            android:name="sentenceIdx"
+            app:argType="integer"
+            app:nullable="false"
+            android:defaultValue= "0" />
     </fragment>
 
 
